# detect

./: .gitignore  AGENT.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: config.yaml  train.yaml
docs/: index.md
scripts/: add_person_labels.py  evaluate_coco_pose_map.py  mark_unknown_attrs.py  prepare_coco_person_pose.py  unify_labels.py  update_person_kpts.py
src/Vigil/: __init__.py  main.py
src/Vigil/inference/: __init__.py  engine.py
src/Vigil/models/: __init__.py  base.py  common.py  registry.py  ultralytics_adapter.py
src/Vigil/models/vigil_v2/: assigner.py  backbone.py  head.py  loss.py  model.py  neck.py
src/Vigil/models/vigil_v3/: __init__.py  heads.py  model.py
src/Vigil/models/yolov8/: __init__.py  model.py
src/Vigil/models/yolov8_pose/: __init__.py  model.py
src/Vigil/pipeline/: gst_pipeline.py
src/Vigil/postprocess/: temporal.py
src/Vigil/train/: dataset.py  train.py  trainer.py
src/ai4pumproom/: __init__.py
tasks/: backlog.md  done.md  in-progress.md
test_model/: __init__.py  assigner.py  backbone.py  common.py  config.yaml  dataset.py  eval.py  heads.py  loss.py  models.py  neck.py  train.py  trainer.py
test_model/data/: coco20.yaml  prepare_coco20.py
test_model/scripts/: audit_dataset.py  run_train.py  setup_autodl.sh
tests/: test_smoke.py
yolo_cpu_demo/: README.md  pose_postprocess.py  video_detect.py
