[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai4pumproom"
version = "0.1.0"
description = "AI-driven intelligent pump room monitoring system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "TBD"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0,<2.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
export = ["onnx>=1.14.0", "onnxruntime>=1.15.0"]
gstreamer = ["pygobject>=3.44.0"]

[project.scripts]
vigil = "Vigil.main:main"
vigil-train = "Vigil.train.train:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/Vigil"]

[tool.uv.sources]
torch = { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
torchvision = { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["data/scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E701", "E702", "E741", "N806", "N812", "N999"]

[tool.ruff.lint.per-file-ignores]
"src/Vigil/**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]